Closed Bug 991504 Opened 11 years ago Closed 11 years ago

Intermittent media-element-source-seek-1.html | application crashed [@ speex_resampler_process_native]

Categories

(Core :: Web Audio, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31
Tracking Status
firefox29 --- unaffected
firefox30 --- unaffected
firefox31 --- affected
firefox-esr24 --- unaffected

People

(Reporter: cbook, Assigned: padenot)

References

()

Details

(Keywords: crash, intermittent-failure)

Attachments

(2 files)

Windows XP 32-bit fx-team pgo test crashtest on 2014-04-02 23:00:52 PDT for push 43752959cc23 slave: t-xp32-ix-087 https://tbpl.mozilla.org/php/getParsedLog.php?id=37190769&tree=Fx-Team TEST-UNEXPECTED-FAIL | file:///C:/slave/test/build/tests/reftest/tests/content/media/test/crashtests/media-element-source-seek-1.html | Exited with code -1073741819 during test run PROCESS-CRASH | file:///C:/slave/test/build/tests/reftest/tests/content/media/test/crashtests/media-element-source-seek-1.html | application crashed [@ speex_resampler_magic] 23:02:48 INFO - Operating system: Windows NT 23:02:48 INFO - 5.1.2600 Service Pack 3 23:02:48 INFO - CPU: x86 23:02:48 INFO - GenuineIntel family 6 model 30 stepping 5 23:02:48 INFO - 8 CPUs 23:02:48 INFO - Crash reason: EXCEPTION_ACCESS_VIOLATION_WRITE 23:02:48 INFO - Crash address: 0x1100000 23:02:48 INFO - Thread 77 (crashed) 23:02:48 INFO - 0 gkmedias.dll!speex_resampler_magic [resample.c:43752959cc23 : 868 + 0xd] 23:02:48 INFO - eip = 0x0120f4a5 esp = 0x15c3fbac ebp = 0x15c3fbbc ebx = 0x010e317e 23:02:48 INFO - esi = 0x08990460 edi = 0x00000000 eax = 0x00007362 ecx = 0x010ffffe 23:02:48 INFO - edx = 0x000074a0 efl = 0x00010202 23:02:48 INFO - Found by: given as instruction pointer in context 23:02:48 INFO - 1 gkmedias.dll!speex_resampler_process_float [resample.c:43752959cc23 : 889 + 0xb] 23:02:48 INFO - eip = 0x0120f51c esp = 0x15c3fbc4 ebp = 0x15c3fbf8 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 2 xul.dll!mozilla::AudioSegment::Resample<float>(SpeexResamplerState_ *,unsigned int,unsigned int) [AudioSegment.h:43752959cc23 : 158 + 0x19] 23:02:48 INFO - eip = 0x0217e921 esp = 0x15c3fc00 ebp = 0x15c3fc68 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 3 xul.dll!mozilla::AudioSegment::ResampleChunks(SpeexResamplerState_ *) [AudioSegment.cpp:43752959cc23 : 126 + 0x10] 23:02:48 INFO - eip = 0x0217eed3 esp = 0x15c3fc70 ebp = 0x15c3fc94 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 4 xul.dll!mozilla::SourceMediaStream::ResampleAudioToGraphSampleRate(mozilla::SourceMediaStream::TrackData *,mozilla::MediaSegment *) [MediaStreamGraph.cpp:43752959cc23 : 2233 + 0x9] 23:02:48 INFO - eip = 0x021a6a29 esp = 0x15c3fc9c ebp = 0x15c3fcb0 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 5 xul.dll!mozilla::SourceMediaStream::AppendToTrack(int,mozilla::MediaSegment *,mozilla::MediaSegment *) [MediaStreamGraph.cpp:43752959cc23 : 2255 + 0x6] 23:02:48 INFO - eip = 0x021c97aa esp = 0x15c3fcb8 ebp = 0x15c3fcd4 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 6 xul.dll!mozilla::MediaDecoderStateMachine::SendStreamData() [MediaDecoderStateMachine.cpp:43752959cc23 : 405 + 0x10] 23:02:48 INFO - eip = 0x0234e418 esp = 0x15c3fcdc ebp = 0x15c3fd9c 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 7 xul.dll!mozilla::ReentrantMonitor::Enter() [ReentrantMonitor.h:43752959cc23 : 75 + 0x7] 23:02:48 INFO - eip = 0x0164cc39 esp = 0x15c3fd9c ebp = 0x15c3fdb8 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 8 xul.dll!mozilla::MediaDecoderStateMachine::DecodeAudio() [MediaDecoderStateMachine.cpp:43752959cc23 : 685 + 0x5] 23:02:48 INFO - eip = 0x025636dc esp = 0x15c3fda4 ebp = 0x15c3fdb8 23:02:48 INFO - Found by: call frame info 23:02:48 INFO - 9 xul.dll!nsRunnableMethodImpl<tag_nsresult ( mozilla::places::`anonymous namespace'::VisitedQuery::*)(void),void,1>::Run() [nsThreadUtils.h:43752959cc23 : 383 + 0x2]
Blocks: 818822
Could the track channel count have changed?
Assignee: nobody → paul
Attached patch patch — — Splinter Review
Attachment #8402779 - Flags: review?(rjesup)
Attachment #8402779 - Attachment is patch: true
Attachment #8402779 - Flags: review?(rjesup) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Oops, forgot to leave-open.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Somehow the temporary fix got backed out without getting marked as backed out (causing bug 995689 and the hits here). Landing the final fix as approved by roc
I see four _different_ failures on winxp, but it's in the same code, so I'll write a followup here.
Depends on: 995968
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
Depends on: 996231
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Summary: Intermittent media-element-source-seek-1.html | Exited with code -1073741819 during test run → Intermittent media-element-source-seek-1.html | application crashed [@ speex_resampler_process_native]
Blocks: 997348
Blocks: 997533
Depends on: 997152
(In reply to comment #1) > Could the track channel count have changed? This was fixed in bug 998711. Comment 47, a crash in wdmaud.drv looks different.
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: