Bug 991504 - Temporary assertion removal to fix bustage in AudioSegment r=jesup CLOSED TREE